"Update GameMap AdjacentList"