@@ -1,7 +1,8 @@
 package edu.duke.ece651.team7.shared;
 
 import static org.junit.jupiter.api.Assertions.*;
-
+import java.util.HashMap;
+import java.util.Map;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -11,67 +12,35 @@ import java.util.Set;
 import org.junit.jupiter.api.Test;
 
 public class GameMapTest {
+
+
+  
   @Test
-  public void test_constructor() {
-    List<Territory> territories = new ArrayList<Territory>();
-    Territory territory = new Territory("testMap");
-    territories.add(territory);
-    GameMap m = new GameMap(territories);
-    assertEquals(territories,m.getTerritories());
+  public void test_getTerritoryByName() {
+    Territory t1 = new Territory("territory1");
+    Territory t2 = new Territory("territory2");
+    Map<Territory, List<Territory>> territoriesAdjacentList = new HashMap<>();
+    territoriesAdjacentList.put(t1, new ArrayList<>(List.of(t2)));
+    territoriesAdjacentList.put(t2, new ArrayList<>(List.of(t1)));
+    GameMap map = new GameMap(territoriesAdjacentList);
+    assertEquals(t1, map.getTerritoryByName("territory1"));
+    assertEquals(t2, map.getTerritoryByName("territory2"));
+    assertThrows(IllegalArgumentException.class, () -> {map.getTerritoryByName("territory3");});
   }
 
   @Test
-  public void test_getTerriesByName(){
-
-    List<Territory> territories = new ArrayList<Territory>();
-    List<Territory> territoriesExpected = new ArrayList<Territory>();
-
-    //if don't override the equal and hashcode in territory, GameMap class
-
-    // Territory territory = new Territory("testMap");
-    // Territory territory2 = new Territory("testMap2");
-    // Territory territory3 = new Territory("testMap");
-    // territories.add(territory);
-    // territories.add(territory2);
-    // territories.add(territory3);
-    // territoriesExpected.add(territory);
-    // territoriesExpected.add(territory3);
-
-    //if override the equal and hashcode in territory, GameMap class
-    territories = Arrays.asList(new Territory("testMap"),new Territory("testMap2"),new Territory("testMap"));
-    territoriesExpected = Arrays.asList(new Territory("testMap"),new Territory("testMap"));
-   
-    GameMap m = new GameMap(territories);
-    assertEquals(territoriesExpected, m.getTerritoriesByName("testMap"));
-
-
+  public void test_isAdjacent(){
+    Territory t1 = new Territory("territory1");
+    Territory t2 = new Territory("territory2");
+    Map<Territory, List<Territory>> territoriesAdjacentList = new HashMap<>();
+    territoriesAdjacentList.put(t1, new ArrayList<>(List.of(t2)));
+    territoriesAdjacentList.put(t2, new ArrayList<>(List.of(t1)));
+    GameMap map = new GameMap(territoriesAdjacentList);
+    assertTrue(map.isAdjacent("territory1", "territory2"));
+    assertTrue(map.isAdjacent("territory2", "territory1"));
+    assertFalse(map.isAdjacent("territory1", "territory1"));
   }
 
-
-  //test cases for override equals in map
-  @Test
-  public void test_equals(){
-    List<Territory> territories = new ArrayList<Territory>();
-    List<Territory> territoriesExpected = new ArrayList<Territory>();
-    
-    //if don't override the equal and hashcode in territory, GameMap class
-
-    // Territory territory = new Territory("testMap");
-    // Territory territory2 = new Territory("testMap2");
-    // territoriesExpected.add(territory);
-    // territoriesExpected.add(territory2);
-    // territories.add(territory);
-    // territories.add(territory2);
-
-
-    //if override the equal and hashcode in territory, GameMap class
-    territoriesExpected = Arrays.asList(new Territory("testMap"),new Territory("testMap2"));
-    territories = Arrays.asList(new Territory("testMap"),new Territory("testMap2"));
-    GameMap m = new GameMap(territories);
-    GameMap mExpected = new GameMap(territoriesExpected);
-    assertEquals(true,m.equals(mExpected));
-
-  }
 
 }
 
